                  Thu Jan 24 22:38:05 UTC 2008


Directory libperl/Asim/lib/Asim/Package
 Branch.pm                 Locally Modified          210 

Updating with simcore changes (rev. 2497 - Sailashri Parthasarathy)

Fix for bug: The branch package no longer appends the "DO NOT DELETE" statement to the changelog.

----------
spartha1    Date: Thu Jan 24 17:50:15 EST 2008  CSN: CSN-asimcore-212
                  Thu Jan 24 22:50:15 UTC 2008


Directory lib/libasim/include/asim
 resource_tracker.h        Locally Modified          211 
 dynamic_array.h           Locally Modified          211 
 port.h                    Locally Modified          211 

Directory lib/libasim/src
 port.cpp                  Locally Modified          211 

Directory modules/warmup
 warmup_instrs.h           Locally Modified          211 
 warmup_instrs.cpp         Locally Modified          211 

Directory modules/power_model
 null_power_model.h        Locally Modified          211 

Updating with simcore changes (rev. 2510 - Brian Slechta)

fixed some valgrind issues
- added destructor to WARMUP_MANAGER_CLASS and WARMUP_HWC_CLASS
- fixed numm thermal model to return NULL for Instance()
- fixed ports to delete their BufferStorage on destruction
- added assert to resource_tracker to catch possible memory errors

----------
spartha1    Date: Thu Jan 24 18:00:35 EST 2008  CSN: CSN-asimcore-213
                  Thu Jan 24 23:00:35 UTC 2008


Directory tools/scripts
 asim-run                  Locally Modified          212 

Updating with simcore changes (rev. 2513 - Eric Borch)

- changed how links get set up when running multiple experiments that
share the same binary. Now the links are relative to the exectuable
location, instead of full path links. This makes running on remote
netbatch farms a bit easier.

- fixed a bug when syncing binaries to remote netbatch farms.
Previously, links were not copied at all. Now they're copied as
links.

Eric